--- a/product-service/tsconfig.json
+++ b/product-service/tsconfig.json
@@ -2,10 +2,7 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
-    "lib": [
-      "es2020",
-      "dom"
-    ],
+    "lib": ["es2020", "dom"],
     "declaration": true,
     "strict": true,
     "noImplicitAny": true,
@@ -20,17 +17,12 @@
     "inlineSources": true,
     "experimentalDecorators": true,
     "strictPropertyInitialization": false,
-    "typeRoots": [
-      "./node_modules/@types"
-    ],
+    "typeRoots": ["./node_modules/@types"],
     "baseUrl": "./",
     "paths": {
       "/opt/mock/nodejs": ["./resources/layers/mock/nodejs/mock"],
       "/opt/utils/nodejs": ["./resources/layers/utils/nodejs/utils"]
     }
   },
-  "exclude": [
-    "node_modules",
-    "cdk.out"
-  ],
+  "exclude": ["node_modules", "cdk.out"]
 }
