add create product endpoint; update lambda layers;

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
       "deploy:product-service": "cd product-service && npm run deploy",
       "deploy:db-service": "cd db-service && npm run deploy",
       "test:product-service": "cd product-service && npm run test",
-      "db.populate": "ts-node ./product-service/db/db-population.ts"
+      "db:populate": "ts-node ./product-service/db/db-population.ts"
     },
     "devDependencies": {},
     "dependencies": {}
