--- a/product-service/package.json
+++ b/product-service/package.json
@@ -12,10 +12,14 @@
     "deploy": "npm install && npm run build && npx aws-cdk deploy --profile=admin --require-approval=never --outputs-file ./cdk-outputs.json"
   },
   "devDependencies": {
+    "@aws-cdk/aws-dynamodb": "^1.203.0",
+    "@aws-cdk/aws-iam": "^1.203.0",
     "@aws-sdk/client-dynamodb": "^3.348.0",
     "@aws-sdk/lib-dynamodb": "^3.348.0",
+    "@types/aws-sdk": "^2.7.0",
     "@types/jest": "^29.5.1",
     "@types/node": "20.1.7",
+    "@types/uuid": "^9.0.2",
     "aws-cdk": "2.80.0",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
