--- a/product-service/package.json
+++ b/product-service/package.json
@@ -16,6 +16,7 @@
     "@aws-cdk/aws-iam": "^1.203.0",
     "@aws-sdk/client-dynamodb": "^3.348.0",
     "@aws-sdk/lib-dynamodb": "^3.348.0",
+    "@types/aws-lambda": "^8.10.119",
     "@types/aws-sdk": "^2.7.0",
     "@types/jest": "^29.5.1",
     "@types/node": "20.1.7",
