--- a/product-service/package.json
+++ b/product-service/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "aws-cdk-lib": "2.80.0",
+    "aws-sdk": "^2.1404.0",
     "constructs": "^10.0.0",
     "dotenv": "^16.1.3",
     "source-map-support": "^0.5.21"
