--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "scripts": {
       "deploy:product-service": "cd product-service && npm run deploy",
       "deploy:import-service": "cd import-service && npm run deploy",
+      "deploy:authorization-service": "cd authorization-service && npm run deploy",
       "test:product-service": "cd product-service && npm run test",
       "test:import-service": "cd product-service && npm run test",
       "db:populate": "ts-node ./product-service/db/db-population.ts"
