--- a/authorization-service/tsconfig.json
+++ b/authorization-service/tsconfig.json
@@ -22,7 +22,10 @@
     "strictPropertyInitialization": false,
     "typeRoots": [
       "./node_modules/@types"
-    ]
+    ],
+    "paths": {
+      "/opt/utils": ["./resources/layers/utils/utils"]
+    }
   },
   "exclude": [
     "node_modules",
